| Bug #22511 | IM does not remove angel-pid-file on clean shutdown | ||
|---|---|---|---|
| Submitted: | 20 Sep 2006 10:54 | Modified: | 8 Mar 2007 4:19 |
| Reporter: | Alexander Nozdrin | ||
| Status: | Closed | ||
| Category: | Instance Manager | Severity: | S3 (Non-critical) |
| Version: | 5.0 | OS: | UNIX |
| Assigned to: | Alexander Nozdrin | Target Version: | |
[20 Sep 2006 10:54]
Alexander Nozdrin
[24 Feb 2007 11:17]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/20526 ChangeSet@1.2425, 2007-02-24 13:18:09+03:00, anozdrin@booka.opbmk +1 -0 Fix for BUG#22511: IM does not remove angel-pid-file on clean shutdown
[7 Mar 2007 23:07]
Konstantin Osipov
Pushed into 5.0.38 and 5.1.17.
[8 Mar 2007 4:19]
Paul DuBois
Noted in 5.0.38, 5.1.17 changelogs.
