Fix for BUG#22511: IM does not remove angel-pid-file on clean shutdown